--- a/T-CHAT.html
+++ b/T-CHAT.html
@@ -1,1 +1,10 @@
-a
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <meta charset="UTF-8"/>
+        <title>T-CHAT</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+    </body>
+</html>
