imageファイル作成 ホーム画面ranking画面作成

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -9,7 +9,7 @@
     <header>
       <h1>
         <a href="TOPページのURL">
-          <img class="logo" src="T-CHAT_icon_2.png" alt="ヘッダー画像"/></a>
+          <img class="logo" src="/image/T-CHAT_icon_2.png" alt="ヘッダー画像"/></a>
       </h1>
       <nav>
           <a href="xxx" class="home">home</a>
