--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -121,7 +121,7 @@
               <h3>tomioka</h3>
               <h1>2023年10月25日</h1>
 
-              <article>firebaseのバグが消えません　助けてください。</article>
+              <article>firebaseのバグが消えません　助けてください</article>
               <span class="article-category">Firebase</span>
               <span class="article-category">Android</span>
               <span class="article-category">Bug</span>
