--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -41,11 +41,7 @@
       <div class="container">
         <aside>
           <div class="item-list">
-            <a href="index.html"
-              ><img class="icon" src="/image/trend_icon.png" alt="サイトロゴ"
-            /></a>
-
-            <div class="head">Trend</div>
+            <div class="head">📈 Trend</div>
           </div>
 
           <div class="item-list">
@@ -121,7 +117,7 @@
               <h3>tomioka</h3>
               <h1>2023年10月25日</h1>
 
-              <article>firebaseのバグが消えません　助けてください</article>
+              <article>Firebaseのバグが消えません　助けてください</article>
               <span class="article-category">Firebase</span>
               <span class="article-category">Android</span>
               <span class="article-category">Bug</span>
