T-CHAT Home画面完成しかけ

--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -97,7 +97,9 @@
             <div class="item">For文</div>
           </div>
         </aside>
-        <main>
+
+          <main>
+            <div class="scroll">
           <div class="box1">
             <section>
               <h3>MIZUNO</h3>
@@ -111,7 +113,6 @@
             <section>
               <h3>tomioka</h3>
               <h1>2023年10月25日</h1>
-
               <article>Firebaseのバグが消えません　助けてください</article>
               <span class="article-category">Firebase</span>
               <span class="article-category">Android</span>
@@ -124,7 +125,6 @@
             <section>
               <h3>shunsuke</h3>
               <h1>2023年10月25日</h1>
-
               <article>
                 トライデントコンピュータの校舎が変わるってほんと？
               </article>
@@ -132,7 +132,9 @@
               <span class="answered-category">解決</span>
             </section>
           </div>
+        </div>
         </main>
+
       </div>
     </div>
   </body>
