Postちょっと修正

--- a/T-CHAT Post/T-CHAT Post.html
+++ b/T-CHAT Post/T-CHAT Post.html
@@ -83,7 +83,12 @@
               class="textarea"
               rows="4"
               cols="50"
-              placeholder="質問したいことここに質問したいことを記載してください例）Firebaseのデータベースを使用してログイン画面を作っています。その途中で問題が発生しました。その問題とはFirebaseの構成が理解出来ないんですよ～、なんで教えてほしいですね～。"
+              placeholder="質問したいこと
+ここに質問したいことを記載してください
+例）
+Firebaseのデータベースを使用してログイン画面を作っています。
+その途中で問題が発生しました。その問題とはFirebaseの構成が理解出来ないんですよ～、
+なんで教えてほしいですね～。"
             ></textarea>
           </div>
         </main>
