--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -106,7 +106,7 @@
               <h1>2023年10月25日</h1>
               <article>アプリ案が思いつかなくて困っています</article>
               <span class="article-category">アプリ案</span>
-              <span class="unsolved-category">未解決</span>
+              <span class="unsolved-category">未回答</span>
             </section>
           </div>
           <div class="box2">
