--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -47,7 +47,7 @@
           <div class="item-list">
             <h4>
               <a href="index.html"
-                ><img src="/image/no1.png" alt="サイトロゴ"
+                ><img src="./image/no1.png" alt="サイトロゴ"
               /></a>
             </h4>
             <div class="item">Bug</div>
@@ -55,7 +55,7 @@
           <div class="item-list">
             <h4>
               <a href="index.html"
-                ><img src="/image/no2.png" alt="サイトロゴ"
+                ><img src="./image/no2.png" alt="サイトロゴ"
               /></a>
             </h4>
             <div class="item">Firebase</div>
@@ -63,7 +63,7 @@
           <div class="item-list">
             <h4>
               <a href="index.html"
-                ><img src="/image/no3.png" alt="サイトロゴ"
+                ><img src="./image/no3.png" alt="サイトロゴ"
               /></a>
             </h4>
             <div class="item">Java</div>
