--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -26,7 +26,7 @@
         <nav>
           <ul>
             <a href="xxx" class="home">🏡Home</a>
-            <a href="xxx" class="question">💡Question</a>
+            <a href="question/question.html" class="question">💡Question</a>
             <div class="search-form">
               <input type="text" class="search" placeholder="Search" />
               <button type="submit" aria-label="検索"></button>
@@ -104,7 +104,7 @@
               <section>
                 <h3>MIZUNO</h3>
                 <h1>2023年10月25日</h1>
-                <article>アプリ案が思いつかなくて困っています</article>
+                <a href="detail/detail.html"><article>アプリ案が思いつかなくて困っています</article></a>
                 <span class="article-category">アプリ案</span>
                 <span class="unsolved-category">未回答</span>
               </section>
@@ -113,7 +113,7 @@
               <section>
                 <h3>tomioka</h3>
                 <h1>2023年10月25日</h1>
-                <article>Firebaseのバグが消えません　助けてください</article>
+                <article>Firebaseのバグが消えません 助けてください</article>
                 <span class="article-category">Firebase</span>
                 <span class="article-category">Android</span>
                 <span class="article-category">Bug</span>
