--- a/detail/detail.html
+++ b/detail/detail.html
@@ -24,13 +24,13 @@
     <div class="background">
       <header>
         <div class="logo">
-          <img src="/image/T-CHAT_icon.png" />
+          <img src="../image/T-CHAT_icon.png" />
         </div>
 
         <nav>
           <ul>
-            <a href="xxx" class="home">🏡Home</a>
-            <a href="xxx" class="question">💡Question</a>
+            <a href="../T-CHAT Home.html" class="home">🏡Home</a>
+            <a href="../question/question.html" class="question">💡Question</a>
             <div class="search-form">
               <input type="text" class="search" placeholder="Search" />
               <button type="submit" aria-label="検索"></button>
