--- a/question/question.html
+++ b/question/question.html
@@ -64,7 +64,9 @@
             <section>
               <h3>MIZUNO</h3>
               <h1>2023年10月25日</h1>
-              <a href="../detail/detail.html"><article>アプリ案が思いつかなくて困っています</article></a>
+              <a href="../detail/detail.html" class="article">
+                <article>アプリ案が思いつかなくて困っています</article>
+              </a>
               <span class="article-category">アプリ案</span>
               <span class="unsolved-category">未回答</span>
             </section>
