--- a/T-CHAT Home.html
+++ b/T-CHAT Home.html
@@ -18,12 +18,12 @@
   <div class="background">
     <header>
       <div class="logo">
-        <img src="image/T-CHAT_icon.png" />
+        <a href="T-CHAT Home.html" class="home"><img src="image/T-CHAT_icon.png" /></a>
       </div>
 
       <nav>
         <ul>
-          <a href="xxx" class="home">🏡Home</a>
+          <a href="T-CHAT Home.html" class="home">🏡Home</a>
           <a href="question/question.html" class="question">💡Question</a>
           <div class="search-form">
             <input type="text" class="search" placeholder="Search" />
