--- a/T-CHAT Post/T-CHAT Post.html
+++ b/T-CHAT Post/T-CHAT Post.html
@@ -22,7 +22,7 @@
     <div class="background">
       <header>
         <div class="logo">
-          <img src="..\image\T-CHAT_icon.png" alt="Your Image" />
+          <a href="../T-CHAT Home.html" class="home"><img src="..\image\T-CHAT_icon.png" alt="Your Image" /></a>
         </div>
         <button class="save">
           <i class="fa-solid fa-floppy-disk"></i>
