--- a/T-CHAT Post/T-CHAT Post.html
+++ b/T-CHAT Post/T-CHAT Post.html
@@ -41,7 +41,7 @@
       <main>
         <div class="box1">
           <select class="list" name="名前" size="1">
-            <option selected="selected">選択して下さい</option>
+            <option selected="selected" hidden>選択して下さい</option>
 
             <option value="private">プライベート</option>
 
