--- a/test.html
+++ b/test.html
@@ -64,7 +64,6 @@
         cursor: pointer;
         margin-top: 10px; /* 適宜調整 */
         display: inline-block; /* インラインブロック要素に設定 */
-        border-radius: 5px; /* ボーダーラジアスを設定 */
       }
 
       /* 画像表示用のスタイル */
@@ -75,9 +74,10 @@
 
       #selectedImage {
         max-width: 50%; /* 画像の最大幅を設定 */
-        max-height: 50%; /* 画像の最大高さを設定 */
+        max-height: 0%; /* 画像の最大高さを設定 */
         margin-top: 10px; /* 適宜調整 */
         border-radius: 5px; /* ボーダーラジアスを設定 */
+        border: 2px solid #3498db; /* 枠線のスタイルを設定 */
       }
 
       /* 閉じるボタンのスタイル */
