--- a/detail/detail.html
+++ b/detail/detail.html
@@ -52,6 +52,7 @@
             <p class="large">アプリ案が思いつかなくて困っています</p>
             <span class="article-category">アプリ案</span>
             <span class="unsolved-category">未解決</span>
+            <span class="total">回答数１</span>
             <p class="border"></p>
             <p class="text-medium">1.アプリ案が思いつかない</p>
             <p class="text-Extremely-small">
@@ -84,7 +85,7 @@
           <section class="response">
             <p class="name">Tomi</p>
             <p class="date">2023年11月25日</p>
-            <p class="text-Extremely-small">
+            <p class="reply">
               2.1企画発表は2案か<br />実際に企画発表をする案は二ついるのでしょうか。そこをお聞きしたいです。
             </p>
           </section>
@@ -107,8 +108,9 @@
                     >ファイルを選択</span
                   >
                   <!-- ファイル名と拡張子を表示するための要素 -->
+                  <span id="fileNameExtension"></span>
+
                   <div id="fileDetails">
-                    <span id="fileNameExtension"></span>
                     <!-- プレビューボタン -->
                     <button id="previewButton" onclick="toggleImage()">
                       プレビュー
