ファイル名　一斉変更

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <link rel="stylesheet" type="text/css" href="T-CHAT Post.css" />
+    <link rel="stylesheet" type="text/css" href="T-CHAT-Post.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -26,8 +26,8 @@
       <div class="background">
         <header>
           <div class="logo">
-            <a href="../T-CHAT Home.html" class="home">
-              <img src="..\image\T-CHAT_icon.png" alt="Your Image" />
+            <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home">
+              <img src="../T-CHAT-Image/T-CHAT_icon.png" alt="Your Image" />
             </a>
           </div>
           <button class="save">
