--- a/T-CHAT-Detail/T-CAHT-Detail.html
+++ b/T-CHAT-Detail/T-CAHT-Detail.html
@@ -24,17 +24,17 @@
     <div class="background">
       <header>
         <div class="logo">
-          <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home"
+          <a href="../T-CHAT-Home.html" class="home"
             ><img src="../T-CHAT-Image/T-CHAT_icon.png"
           /></a>
         </div>
 
         <nav>
           <ul>
-            <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home">🏡Home</a>
+            <a href="../T-CHAT-Home.html" class="home">🏡Home</a>
             <a href="../T-CHAT-Question/T-CHAT-Question.html" class="question">💡Question</a>
             <div class="search-form">
-              <input type="text" class="search" placeholder="Search" />
+              <input type="text" class="search" placeholder="Search"/>
               <button type="submit" aria-label="検索"></button>
             </div>
           </ul>
