--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -26,7 +26,7 @@
       <div class="background">
         <header>
           <div class="logo">
-            <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home">
+            <a href="../T-CHAT-Home.html" class="home">
               <img src="../T-CHAT-Image/T-CHAT_icon.png" alt="Your Image" />
             </a>
           </div>
