--- a/T-CHAT-Question/T-CHAT-Question.html
+++ b/T-CHAT-Question/T-CHAT-Question.html
@@ -26,15 +26,15 @@
     <div class="background">
       <header>
         <div class="logo">
-          <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home"
+          <a href="../T-CHAT-Home.html" class="home"
             ><img src="../T-CHAT-Image/T-CHAT_icon.png"
           /></a>
         </div>
 
         <nav>
           <ul>
-            <a href="../T-CHAT-Home/T-CHAT-Home.html" class="home">🏡Home</a>
-            <a href="../T-CHAT-Question/T-CHAT-Question.html" class="question"
+            <a href="../T-CHAT-Home.html" class="home">🏡Home</a>
+            <a href="T-CHAT-Question.html" class="question"
               >💡Question</a
             >
             <div class="search-form">
@@ -72,7 +72,7 @@
               <section>
                 <h3>MIZUNO</h3>
                 <h1>2023年10月25日</h1>
-                <a href="../detail/detail.html" class="article">
+                <a href="../T-CHAT-Detail/T-CAHT-Detail.html" class="article">
                   <article>アプリ案が思いつかなくて困っています</article>
                 </a>
                 <span class="article-category">アプリ案</span>
