--- a/T-CHAT-Question/T-CHAT-Question.html
+++ b/T-CHAT-Question/T-CHAT-Question.html
@@ -77,6 +77,9 @@
                 </a>
                 <span class="article-category">アプリ案</span>
                 <span class="unsolved-category">未回答</span>
+                <div>
+                  <span class="unsolved-category-answer">回答数１</span>
+                </div>
               </section>
             </div>
             <div class="box2">
@@ -89,6 +92,9 @@
                 <span class="article-category">Bug</span>
                 <span class="article-category">Java</span>
                 <span class="Notanswered-category">未解決</span>
+                <div>
+                  <span class="Notanswered-category-answer">回答数１</span>
+                </div>
               </section>
             </div>
             <div class="box3">
@@ -100,6 +106,9 @@
                 </article>
                 <span class="article-category">Java</span>
                 <span class="answered-category">解決</span>
+                <div>
+                  <span class="answered-category-answer">回答数１</span>
+                </div>
               </section>
             </div>
           </div>
