--- a/test.html
+++ b/test.html
@@ -1,55 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-      }
+    <meta charset="utf-8" />
+    <title>7-1-15　下に押し込まれる（立体が平面に）</title>
 
-      .fixed-element {
-        width: 100%;
-        background-color: #fff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
-      }
-
-      .content {
-        margin-top: 60px;
-        /* 余白の部分を確保 */
-      }
-
-      /* その他のスタイルなども必要に応じて追加 */
-    </style>
+    <!--==============レイアウトを制御する独自のCSSを読み込み===============-->
+    <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
-    <div class="fixed-element" id="fixedElement">
-      <!-- 固定される要素のコンテンツ -->
-      Your fixed content goes here.
+    <div class="btn03 pushdown">
+      <span>ファイルを選択</span>
     </div>
-
-    <div class="content">
-      <!-- その他のコンテンツ -->
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-    </div>
-
-    <script>
-      window.addEventListener("scroll", function () {
-        var fixedElement = document.getElementById("fixedElement");
-        var scrollTop = window.scrollY || document.documentElement.scrollTop;
-
-        if (scrollTop > 60) {
-          // スクロールが60px以上の場合
-          fixedElement.style.position = "fixed";
-          fixedElement.style.top = "0";
-        } else {
-          fixedElement.style.position = "static";
-          fixedElement.style.top = "auto";
-        }
-      });
-    </script>
   </body>
 </html>
