--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -107,18 +107,19 @@
             <div class="box1">
               <section>
                 <h3>MIZUNO</h3>
-                <h1>2023年10月25日</h1>
+                <h1>投稿日：2023年10月25日</h1>
                 <a href="T-CHAT-Detail/T-CAHT-Detail.html" class="article">
                   <article>アプリ案が思いつかなくて困っています</article>
                 </a>
                 <span class="article-category">アプリ案</span>
                 <span class="unsolved-category">未回答</span>
+                <span class="answers">回答数：1件</span>
               </section>
             </div>
             <div class="box2">
               <section>
                 <h3>tomioka</h3>
-                <h1>2023年10月25日</h1>
+                <h1>投稿日：2023年10月25日</h1>
                 <article>Firebaseのバグが消えません 助けてください</article>
                 <span class="article-category">Firebase</span>
                 <span class="article-category">Android</span>
@@ -130,7 +131,7 @@
             <div class="box3">
               <section>
                 <h3>shunsuke</h3>
-                <h1>2023年10月25日</h1>
+                <h1>投稿日：2023年10月25日</h1>
                 <article>
                   トライデントコンピュータの校舎が変わるってほんと？
                 </article>
