--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" type="text/css" href="T-CHAT-Post.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha384-GLhlTQ8i7uqF1E1+eLvFIH1KRw8i/SF5+FmNDPGPLsMtkI1i66UTZvcXEUdamzjH"
+      crossorigin="anonymous"
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Noto+Sans+JP&family=Sawarabi+Gothic&display=swap"
@@ -15,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto:ital,wght@0,500;1,100&display=swap"
       rel="stylesheet"
     />
+
+    <!-- ここからポップアップのlink -->
+
+    <!-- ここまでがポップアップのlink -->
   </head>
 
   <body>
@@ -63,9 +73,24 @@
           </div>
 
           <div class="box2">
-            <button class="photo">
-              <i class="fa-solid fa-photo-film fa-2x"></i>
-            </button>
+            <div
+              for="photoInput"
+              class="tooltip-container button1"
+              onmouseover="showTooltip('Button 1')"
+              onmouseout="hideTooltip(event)"
+              onmouseleave="handleTooltipMouseLeave(event)"
+            >
+              <input
+                type="file"
+                id="photoInput"
+                accept="image/*"
+                multiple
+                style="display: none"
+              />
+              <label for="photoInput" class="fas fa-photo-film fa-2x"></label>
+              <div id="myTooltip" class="tooltip">添付する画像の選択</div>
+            </div>
+
             <i class="fa-solid fa-tags fa-2x"></i>
 
             <input
@@ -77,15 +102,42 @@
             />
 
             <label class="fa-solid fa-border">
-              <button class="pencil">
+              <div
+                class="tooltip-container button2"
+                onmouseover="showTooltip('Button 2', event)"
+                onmouseout="hideTooltip(event)"
+                onmouseleave="handleTooltipMouseLeave(event)"
+              >
                 <i class="fa-solid fa-pencil fa-2x"></i>
-              </button>
-              <button class="book">
+                <div class="tooltip">編集</div>
+              </div>
+
+              <div
+                class="tooltip-container button3"
+                onmouseover="showTooltip('Button 3', event)"
+                onmouseout="hideTooltip(event)"
+                onmouseleave="handleTooltipMouseLeave(event)"
+              >
                 <i class="fa-solid fa-book fa-2x"></i>
-              </button>
-              <button class="eye">
-                <i class="fa-solid fa-eye fa-2x"></i>
-              </button>
+                <div class="tooltip">ノート</div>
+              </div>
+
+              <div
+                class="tooltip-container button4"
+                onmouseover="showTooltip('Button 4', event)"
+                onmouseout="hideTooltip(event)"
+                onmouseleave="handleTooltipMouseLeave(event)"
+              >
+                <div id="myModal" class="modal">
+                  <span class="close" onclick="closeModal()">&times;</span>
+                  <div class="modal-content" id="previewContainer"></div>
+                </div>
+                <label
+                  onclick="previewPhotos()"
+                  class="fa-solid fa-eye fa-2x"
+                ></label>
+                <div class="tooltip">プレビュー</div>
+              </div>
             </label>
           </div>
 
@@ -105,5 +157,6 @@ Firebaseのデータベースを使用してログイン画面を作っていま
         </main>
       </div>
     </div>
+    <script src="T-CHAT-Post.js"></script>
   </body>
 </html>
