--- a/test.html
+++ b/test.html
@@ -1,15 +1,176 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <title>7-1-15　下に押し込まれる（立体が平面に）</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>写真のプレビューモーダル</title>
+    <style>
+      /* Style for the modal */
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 50px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.9);
+      }
 
-    <!--==============レイアウトを制御する独自のCSSを読み込み===============-->
-    <link rel="stylesheet" type="text/css" href="test.css" />
+      /* Style for the modal content */
+      .modal-content {
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      /* Style for the close button */
+      .close {
+        color: #fff;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 30px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      .close:hover {
+        color: #bbb;
+      }
+
+      /* Additional styles for the photo and modal animation */
+      .modal-content img {
+        max-width: 100%;
+        max-height: 80vh;
+        object-fit: contain;
+        margin: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+      }
+
+      .modal-content img.loaded {
+        opacity: 1;
+      }
+
+      .modal.fade-in {
+        animation: fadeInModal 0.5s ease-in-out;
+      }
+
+      .modal.fade-out {
+        animation: fadeOutModal 0.5s ease-in-out;
+      }
+
+      @keyframes fadeInModal {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeOutModal {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+
+      /* Additional styles for custom file upload button */
+      #photoInput {
+        display: none; /* 標準のファイル名表示を非表示にする */
+      }
+
+      .custom-file-upload {
+        border: 1px solid #ccc;
+        display: inline-block;
+        padding: 6px 12px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
-    <div class="btn03 pushdown">
-      <span>ファイルを選択</span>
+    <script
+      src="https://kit.fontawesome.com/eae95656cf.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- ダミーのファイル選択ボタンを作成 -->
+    <label for="photoInput" class="custom-file-upload">写真を選択</label>
+    <input
+      type="file"
+      id="photoInput"
+      accept="image/*"
+      multiple
+      style="display: none"
+    />
+    <label for="photoInput" class="fas fa-photo-film fa-2x"></label>
+
+    <label class="custom-file-upload" onclick="previewPhotos()">
+      プレビュー
+    </label>
+    <div id="myModal" class="modal">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <div class="modal-content" id="previewContainer"></div>
     </div>
+
+    <script>
+      function previewPhotos() {
+        var modal = document.getElementById("myModal");
+        var input = document.getElementById("photoInput");
+        var previewContainer = document.getElementById("previewContainer");
+
+        // プレビューをクリア
+        previewContainer.innerHTML = "";
+
+        if (input.files && input.files.length > 0) {
+          for (var i = 0; i < input.files.length; i++) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+              var img = document.createElement("img");
+              img.src = e.target.result;
+              img.classList.add("loaded");
+              previewContainer.appendChild(img);
+            };
+
+            reader.readAsDataURL(input.files[i]);
+          }
+
+          modal.classList.add("fade-in");
+          modal.style.display = "block";
+
+          setTimeout(function () {
+            var previewImages = document.querySelectorAll(".modal-content img");
+            previewImages.forEach(function (image) {
+              image.classList.add("loaded");
+            });
+          }, 100);
+        }
+      }
+
+      function closeModal() {
+        var modal = document.getElementById("myModal");
+        var previewContainer = document.getElementById("previewContainer");
+
+        modal.classList.add("fade-out");
+
+        // フェードアウトのトリガーを追加し、アニメーション後にモーダルを非表示にする
+        setTimeout(function () {
+          modal.style.display = "none";
+          modal.classList.remove("fade-out");
+
+          // モーダルを閉じたらプレビューをクリア
+          previewContainer.innerHTML = "";
+        }, 400);
+      }
+    </script>
   </body>
 </html>
