--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -89,7 +89,7 @@
             <i class="fa-solid fa-tags fa-2x"></i>
 
           <!-- 追加 -->
-          <select multiple class="tag" type="text" name="タグ" placeholder="タグを入力してください">
+          <select multiple class="tag" name="タグ" placeholder="タグを選択してください">
             <option value="1">アプリ案</option>
             <option value="2">Firebase</option>
             <option value="3">Bug</option>
