--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -32,7 +32,7 @@
               >💡Question</a
             >
             <div class="search-form">
-              <input type="text" class="search" placeholder="Search" />
+              <input type="text" id="search" placeholder="Search" />
               <button type="submit" aria-label="検索"></button>
             </div>
           </ul>
