--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -32,8 +32,12 @@
               >💡Question</a
             >
             <div class="search-form">
-              <input type="text" id="search" placeholder="Search" />
-              <button type="submit" aria-label="検索"></button>
+              <input type="text" id="search_text" placeholder="Search" />
+              <button
+                type="submit"
+                id="search_button"
+                aria-label="検索"
+              ></button>
             </div>
           </ul>
         </nav>
