--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -32,7 +32,12 @@
               >💡Question</a
             >
             <div class="search-form">
-              <input type="text" id="search_text" placeholder="Search" />
+              <input
+                type="text"
+                id="search_text"
+                class="search"
+                placeholder="Search"
+              />
               <button
                 type="submit"
                 id="search_button"
