完成に近づく

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Sawarabi+Gothic&display=swap"
       rel="stylesheet"
     />
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
 
   <body>
@@ -163,10 +167,16 @@
                 <span class="answered-category">解決</span>
               </section>
             </div>
+            <div id="add-element"></div>
           </div>
         </main>
       </div>
     </div>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-latest.min.js"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="T-CHAT-Home.js"></script>
   </body>
 </html>
