スクロールバーの枠内に入れた

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -14,6 +14,14 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Sawarabi+Gothic&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.js"
+    ></script>
   </head>
 
   <body>
@@ -127,7 +135,11 @@
         </aside>
 
         <main>
-          <div class="scroll">
+          <div
+            class="scroll-area"
+            data-simplebar
+            data-simplebar-auto-hide="false"
+          >
             <div class="box1">
               <section>
                 <h3>MIZUNO</h3>
