--- a/T-CHAT-Signin/T-CHAT-Signin.html
+++ b/T-CHAT-Signin/T-CHAT-Signin.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -60,11 +58,11 @@
     </div>
 
     <div class="signin-container">
-      <form id="signinForm">
+      <form id="SigninForm">
         <input type="text" id="username" placeholder="ユーザー名"
         name="username" required />
-        <input type="text" id="username" placeholder="メールアドレス"
-        name="username" required />
+        <input type="text" id="mailaddress" placeholder="メールアドレス"
+        name="mailaddress" required />
 
         <input type="password" id="password" placeholder="パスワード" name="password" required />
 
