--- a/T-CHAT-Signin/T-CHAT-Signin.html
+++ b/T-CHAT-Signin/T-CHAT-Signin.html
@@ -8,8 +8,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha384-GLhlTQ8i7uqF1E1+eLvFIH1KRw8i/SF5+FmNDPGPLsMtkI1i66UTZvcXEUdamzjH"
-      crossorigin="anonymous"
     />
 
     <link
@@ -70,7 +68,7 @@
 
         
 
-        <button type="submit" class="submit">登録する</button>
+        <button type="button" class="submit" id="register_button">登録する</button>
       </form>
       <p id="error-message"></p>
     </div>
