--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -153,7 +153,7 @@
                 </a>
                 <span class="article-category">アプリ案</span>
                 <span class="unsolved-category">未回答</span>
-                <span class="answers">回答数：1件</span>
+                <span class="answers1">回答数：1件</span>
               </section>
             </div>
             <div class="box2">
@@ -166,6 +166,7 @@
                 <span class="article-category">Bug</span>
                 <span class="article-category">Java</span>
                 <span class="Notanswered-category">未解決</span>
+                <span class="answers2">回答数：1件</span>
               </section>
             </div>
             <div class="box3">
@@ -177,6 +178,7 @@
                 </article>
                 <span class="article-category">Java</span>
                 <span class="answered-category">解決</span>
+                <span class="answers3">回答数：1件</span>
               </section>
             </div>
             <div id="add-element"></div>
