--- a/T-CHAT-Login/T-CHAT-Login.html
+++ b/T-CHAT-Login/T-CHAT-Login.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="T-CHAT-Login.css" />
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       integrity="sha384-GLhlTQ8i7uqF1E1+eLvFIH1KRw8i/SF5+FmNDPGPLsMtkI1i66UTZvcXEUdamzjH"
       crossorigin="anonymous"
     />
-
     <link
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Noto+Sans+JP&family=Sawarabi+Gothic&display=swap"
       rel="stylesheet"
@@ -57,14 +58,14 @@
 
     <div class="login-container">
       <form id="loginForm">
-        <input type="text" id="username" placeholder="ユーザー名 または メールアドレス"
-        name="username" required />
+        <input type="text" id="username_or_mail" placeholder="ユーザー名 または メールアドレス"
+        name="username_or_mail" required />
 
         <input type="password" id="password" placeholder="パスワード" name="password" required />
 
         <p class="signin">T-CHATのアカウントを持っていない場合は<a href="../T-CHAT-Signin/T-CHAT-Signin.html">新規登録</a>から。</p>
 
-        <button type="submit" class="submit">T-CHATにログイン</button>
+        <button type="button" class="submit" id="register_button">T-CHATにログイン</button>
       </form>
       <p id="error-message"></p>
     </div>
