--- a/T-CHAT-Signin/T-CHAT-Signin.html
+++ b/T-CHAT-Signin/T-CHAT-Signin.html
@@ -61,10 +61,12 @@
           required />
 
         <input type="password" id="password" placeholder="パスワード" name="password" required />
-        <i id="eye" class="fa-solid fa-eye"></i>
+        <i id="eye" class="fa-solid fa-eye"></i> 
+        <!-- 目のアイコン -->
 
         <p class="rule">※半角英字、数字、記号を組み合わせて6文字以上で入力してください。</p>
 
+        <!-- パスワードの目の処理 -->
         <script>
           let eye = document.getElementById("eye");
           eye.addEventListener('click', function () {
@@ -86,7 +88,9 @@
       </form>
 
       <p id="loginResult" style="display: none;"></p>
+      <!-- idだけ欲しかったから -->
 
+      <!-- 登録ボタン押した後の処理 -->
       <script>
         function validateLogin() {
           var username = document.getElementById("username").value;
@@ -109,7 +113,7 @@
             location.href = "../T-CHAT-Home.html";
             document.getElementById("loginResult").innerText = alert("ログイン成功！");
           } else {
-            document.getElementById("loginResult").innerText = alert("ユーザー名またはパスワードが無効です。");
+            document.getElementById("loginResult").innerText = alert("ユーザー名またはメールアドレスまたはパスワードが無効です。");
           }
         }
       </script>
