--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -42,10 +42,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
     <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css"
-    />
+    <link rel="stylesheet" href="multiple-select.min.css" />
   </head>
 
   <body>
