パスワードの記号修正

--- a/T-CHAT-Signin/T-CHAT-Signin.html
+++ b/T-CHAT-Signin/T-CHAT-Signin.html
@@ -65,6 +65,7 @@
         <!-- 目のアイコン -->
 
         <p class="rule">※半角英字、数字、記号を組み合わせて6文字以上で入力してください。</p>
+        <p class="rule2">※ただし記号は、 !  $  -  ?  # しか使えません。</p>
 
         <p class="signin">もしT-CHATのアカウントを持っている場合は<a href="../T-CHAT-Login/T-CHAT-Login.html">ログイン</a>から。</p>
 
